finish role management
